# test-ci

./: pyproject.toml
.github/workflows/: ci.yaml
calculator/: calc.py
calculator/tests/: test_calc.py
