[tool.poetry]
name = "test-ci"
version = "0.1.0"
description = ""
authors = ["João Prado <joaopedro0128@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pytest = "^7.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
